--- a/Parsing+Job+Profiles+through+NLP.ipynb
+++ b/Parsing+Job+Profiles+through+NLP.ipynb
@@ -1801,7 +1801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### _— Abhishek Chhibber_"
+    "### _— Vaishnavi Aswale_"
    ]
   }
  ],
